Version 2.4 - 28 October 2013, by Per Øyvind Karlsen

- detect new kernel-3.12 modules

Version 2.3 -  6 May 2013, by Per Øyvind Karlsen

- follow ldetect api changes wrt. kmodules from modalias vs pcitable

Version 2.2 - 31 March 2013, by Per Øyvind Karlsen

- probe virtual drivers too (mga#9546)
  (install from Xen hd not supported yet)
- load hid_generic module
- update list_modules for xen dom0 and virtio support (#9242)

Version 2.1 -  5 Februar 2013, by Per Øyvind Karlsen

- fix regression in pcmcia related code
- compile with -fno-rtti -fno-exceptions when building against uClibc

Version 2.0 -  3 November 2012, by Per Øyvind Karlsen

- compile implementation of /sbin/consoletype into stage1 binary
- switch to C++
- do reboot using 'reboot' from busybox rather than manually go through the
  process ourself
- fix 'Go to console' to actually spawn a shell rather than just exiting
  rescue-gui
- disable SPAWN_SHELL, there's no need for this crippled shell when we now have
  a lot more complete shell provided by busybox available
- as we no longer load rescue mode from a separate squashfs image, don't try
  prepare for fetching it from any specific media
- don't try mount squashfs image for stage2 installer
- dynamically link binary rather than statically
- add firmware loader written in C (based on hotplug2) (mga#6323)
- retry with FTP instead of HTTP when there's no proxy and user didn't
  provided the architecture in the URL
- fix URL passed to stage2 when user didn't provide the arch in the
  install path (mga#6823)
- fix drvinst to only compare the length of drivertype, so ie. comparing
  'STORAGE' against 'STORAGE_IDE' is true again
- load module descriptions directly from modules rather than distributing
  them in pregenerated 'modules.description' file
- update to kmod 10
- compile serial_probe source directly into stage1 binary

Version 1.60 -  9 September 2012, by Per Øyvind Karlsen
