@@ -35,7 +35,6 @@
 #include <signal.h>
 #include <linux/unistd.h>
 #include <libldetect.h>
-#include <hid.h>
 #include <libgen.h>
 
 #include "stage1.h"
@@ -248,17 +247,6 @@ static void handle_pcmcia(void)
 }
 #endif
 
-static void handle_hid(void)
-{
-    hid h;
-    h.probe();
-    for (uint16_t i = 0; i < h.size(); i++) {
-	if (!h[i].module.empty())
-	    my_modprobe(h[i].module.c_str(), ANY_DRIVER_TYPE, NULL);
-    }
-    my_modprobe("hid_generic", ANY_DRIVER_TYPE, NULL);
-}
-
 
 /************************************************************
  */
@@ -430,7 +418,7 @@ int main(int argc __attribute__ ((unused)), char *argv[], char *env[])
 
 	probe_that_type(VIRTIO_DEVICES, BUS_ANY);
 
-        /* load usb interface as soon as possible, helps usb mouse detection in stage2 */
+        /* load usb interface as soon as possible, helps usb keyboard & mouse  */
 	probe_that_type(USB_CONTROLLERS, BUS_USB);
 
 	if (IS_THIRDPARTY)
