@@ -1,3 +1,7 @@
+- load modules for usb controllers and hid devices in rescue mode as well,
+  otherwise you'll easily find yourself standing there looking st00pid without
+  any ability to use the keyboard.. :p
+
 Version 2.4 - 28 October 2013, by Per Øyvind Karlsen
 
 - detect new kernel-3.12 modules
